# Operating-Systems-BSU-Lab-5

./: CMakeLists.txt  OS_Laboratory_Work_5.cpp  OS_Laboratory_Work_5.h  README.md  client.cpp  constants.h  employee.h  fileio.cpp  fileio.h  pipe.cpp  pipe.h  protocol.cpp  protocol.h  server.cpp  sync.cpp  sync.h  test.cpp
